tests/baselines/reference/functionLiteralForOverloads.errors.txt
tests/cases/conformance/types/specifyingTypes/typeLiterals/functionLiteralForOverloads.ts(14,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/specifyingTypes/typeLiterals/functionLiteralForOverloads.ts(15,5): error TS2463: Duplicate overload signature for call signature.


==== tests/cases/conformance/types/specifyingTypes/typeLiterals/functionLiteralForOverloads.ts (2 errors) ====
    // basic uses of function literals with overloads
    
    var f: {
        (x: string): string;
        (x: number): number;
    } = (x) => x;
    
    var f2: {
        <T>(x: string): string;
        <T>(x: number): number;
    } = (x) => x;
    
    var f3: {
        <T>(x: T): string;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): number;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    } = (x) => x;
    
    var f4: {
        <T>(x: string): T;
        <T>(x: number): T;
    } = (x) => x;